# enali

./: README  vimrc
hacking/: a  auth_example  auth_example.c  exploit_notesearch  exploit_notesearch.c  fmt_uncommon  fmt_uncommon.c  fmt_uncommon2  fmt_uncommon2.c  fmt_vunc  fmt_vunc.c  game_of_chance.c  getenv_example.c  hacking.h  me.txt  notesearch  notesearch.c  notetaker  notetaker.c  overflow_example  overflow_example.c  setuid.sh  srand_example  srand_example.c  stack_example  stack_example.c  test.cpp  time_example1  time_example1.c  time_example2  time_example2.c
opencv/: CMakeLists.txt  ImageConfig.h.in  NavImage  clean.sh  main.cpp
opencv/imageFuns/: CMakeLists.txt  ColorDect.cpp  colorReduce.cpp  imageFuns.hpp  salt.cpp  sharpen.cpp  sharpen2DC3I.cpp
shell/: cfg.sh  clang_llvm.sh  crk.sh  face.me  func.sh  git.sh  pkg.sh  srclst.sh  vim.sh  vimrc.me
vimwiki/:  Learning Python .wiki   if .wiki   numpy .wiki   作用域 .wiki   元组tuple .wiki   列表list .wiki   参数 .wiki   基础 .wiki   字典dict .wiki   字符串string .wiki   数字number .wiki   文件file .wiki   文档 .wiki   模块 .wiki   类型总述 .wiki   迭代和解析2 .wiki   迭代器和解析1 .wiki   高级 .wiki  index.wiki  while_for.wiki  总述.wiki
web/weblog/config/initializers/: secret_token.rb
